--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,14 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "baseUrl": ".", 
+    "paths": {
+      "@/styles/*": ["styles/*"],
+      "@/components/*": ["components/*"],
+      "@/app/*": ["app/*"],
+      "@/pages/*": ["pages/*"],
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
